[package]
name = "wfh"
version = "0.1.0"
authors = ["kazuyoshi <kato.kazuyoshi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.16.1"
libc = "0.2.66"
notify = "4.0.15"
structopt = "0.3.7"
ignore = "0.4"
log = "0.4.0"
env_logger = "0.7.1"