[package]
name = "wfh"
version = "0.1.0"
authors = ["kazuyoshi <kato.kazuyoshi@gmail.com>"]
edition = "2018"
license = "MIT"
description = "rsync as you edit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.20.0"
libc = "0.2.92"
notify = "4.0.15"
structopt = "0.3.21"
ignore = "0.4"
log = "0.4.14"
env_logger = "0.8.3"
tempfile = "3"
ctrlc = { version = "3.1", features = ["termination"] }
